--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -22,6 +22,7 @@ for (var i = 0; i < btns.length; i++) {
 $(".num").counterUp({delay:5,time:500});
 
 </script>
+<div id="piechart_3d" style="width: 900px; height: 500px;margin-left: 400px;"></div>
 </body>
 
 
