--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,6 +7,45 @@ $button.addEventListener('click', (e) => {
   e.preventDefault();
   $wrapper.classList.toggle('toggled');
 });
+(function(document) {
+	'use strict';
+
+	var LightTableFilter = (function(Arr) {
+
+		var _input;
+
+		function _onInputEvent(e) {
+			_input = e.target;
+			var tables = document.getElementsByClassName(_input.getAttribute('data-table'));
+			Arr.forEach.call(tables, function(table) {
+				Arr.forEach.call(table.tBodies, function(tbody) {
+					Arr.forEach.call(tbody.rows, _filter);
+				});
+			});
+		}
+
+		function _filter(row) {
+			var text = row.textContent.toLowerCase(), val = _input.value.toLowerCase();
+			row.style.display = text.indexOf(val) === -1 ? 'none' : 'table-row';
+		}
+
+		return {
+			init: function() {
+				var inputs = document.getElementsByClassName('light-table-filter');
+				Arr.forEach.call(inputs, function(input) {
+					input.oninput = _onInputEvent;
+				});
+			}
+		};
+	})(Array.prototype);
+
+	document.addEventListener('readystatechange', function() {
+		if (document.readyState === 'complete') {
+			LightTableFilter.init();
+		}
+	});
+
+})(document);
 
 // Add active class to the current button (highlight it)
 var header = document.getElementById("sidebar-wrapper");
@@ -22,7 +61,15 @@ for (var i = 0; i < btns.length; i++) {
 $(".num").counterUp({delay:5,time:500});
 
 </script>
-<div id="piechart_3d" style="width: 900px; height: 500px;margin-left: 400px;"></div>
+<div class="row">
+   <div class=" col-lg-4 col-md-3 col-sm-6" style="margin-left: 300px;">
+
+<div id="piechart_3d" style="width: 900px; height: 500px; "></div>
+   </div>
+   <div class=" col-lg-3 col-md-3 col-sm-6" >
+<div id="piechart_4d" style="width: 900px; height: 500px;"></div>
+</div>
+</div>
 </body>
 
 
