--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,84 +1,117 @@
 
 <%- include('partials/header');-%>
 
-<section id="content-wrapper" class="container">
+  <section id="content-wrapper" class="container">
+          
+        <h3 style="text-align:center;">Dashboard</h3>
         
-      <h3 style="text-align:center;">Dashboard</h3>
-      
-    <div class="row" >
+      <div class="row" >
 
-      <div class=" col-lg-3 col-md-3 col-sm-6  ca" style="background-color:white;border: 1px solid gray ; border-radius: 8px;">
-       <h5 style="float:left;"><i class="fa fa-mortar-board"  style="font-size:36px"></i><span style="color:gray;">Students</span></h5>
-       <h1 style="float:right;color:goldenrod;" class="num"><%=  students  %></h1>
-       <div class="container">
-       <br>
-        <br>
-        <div class="progress">
-          <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="<%=(students/375)*100 %>" aria-valuemin="0" aria-valuemax="100" style="width: <%=(students/375)*100 %>%;color: black;">
-            <%=Math.floor((students/375)*100) %>%
+        <div class=" col-lg-3 col-md-3 col-sm-6  ca" style="background-color:white;border: 1px solid gray ; border-radius: 8px;">
+         <h5 style="float:left;"><i class="fa fa-mortar-board"  style="font-size:36px"></i><span style="color:gray;">Students</span></h5>
+         <h1 style="float:right;color:goldenrod;" class="num"><%=  students  %></h1>
+         <div class="container">
+         <br>
+          <br>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="<%=(students/375)*100 %>" aria-valuemin="0" aria-valuemax="100" style="width: <%=(students/375)*100 %>%;color: black;">
+              <%=Math.floor((students/375)*100) %>%
+            </div>
           </div>
         </div>
-      </div>
+          
+         
+        </div>
+
+        <div class=" col-lg-3 col-md-3 col-sm-6  ca" style="background-color:white; border: 1px solid gray ; border-radius: 8px;">
+         <h5 style="float:left;"><i class="fa fa-calendar-check-o"  style="font-size:36px"></i><span style="color:gray;">Attendance</span></h5>
+         <h1 style="float:right;color:goldenrod;" class="num"><%=  present  %></h1>
+         <br>
+         <br>
+         <div class="progress" >
+          <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar"
+          aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:<%=  present  %>%; color: black;">
+          <%=  present  %>%
+          </div>
+        </div>
+        </div>
         
-       
-      </div>
-
-      <div class=" col-lg-3 col-md-3 col-sm-6  ca" style="background-color:white; border: 1px solid gray ; border-radius: 8px;">
-       <h5 style="float:left;"><i class="fa fa-calendar-check-o"  style="font-size:36px"></i><span style="color:gray;">Attendance</span></h5>
-       <h1 style="float:right;color:goldenrod;" class="num"><%=  present  %></h1>
-       <br>
-       <br>
-       <div class="progress" >
-        <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar"
-        aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:<%=  present  %>%; color: black;">
-        <%=  present  %>%
+        <div class=" col-lg-3 col-md-3 col-sm-6  ca" style="background-color:white;border: 1px solid gray ; border-radius: 8px;">
+         <h5 style="float:left;"><i class="fa fa-battery-3"  style="font-size:30px"></i><span style="color:gray;">Seats Left</span></h5>
+         <h1 style="float:right;color:goldenrod;" class="num"><%=  375-students  %></h1>
+         <br>
+         <br>
+         <div class="progress">
+          <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"
+          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:<%=((375-students)/375)*100 %>%;color: black;">
+          <%=Math.floor(((375-students)/375)*100) %>%
+          </div>
         </div>
-      </div>
-      </div>
-      
-      <div class=" col-lg-3 col-md-3 col-sm-6  ca" style="background-color:white;border: 1px solid gray ; border-radius: 8px;">
-       <h5 style="float:left;"><i class="fa fa-battery-3"  style="font-size:30px"></i><span style="color:gray;">Seats Left</span></h5>
-       <h1 style="float:right;color:goldenrod;" class="num"><%=  375-students  %></h1>
-       <br>
-       <br>
-       <div class="progress">
-        <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"
-        aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:<%=((375-students)/375)*100 %>%;color: black;">
-        <%=Math.floor(((375-students)/375)*100) %>%
         </div>
-      </div>
-      </div>
+        
       
-    
-    </div>
-    <script type="text/javascript">
-     let a=parseInt("<%= arr[0].count %>");
-     let b=parseInt("<%= arr[1].count %>");
-     let c=parseInt("<%= arr[2].count %>");
-     let d=parseInt("<%= arr[3].count %>");
-    console.log(a,b,c,d);
-    console.log(typeof(a));
-      google.charts.load("current", {packages:["corechart"]});
-      google.charts.setOnLoadCallback(drawChart);
-      function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ['College', 'Students'],
-          ['CET',     a],
-          ['IT',      b],
-          ['EC',  c],
-          ['TC', d]
-        ]);
-
-        var options = {
-          title: 'HOSTEL INFO',
-          is3D: true,
-        };
-
-        var chart = new google.visualization.PieChart(document.getElementById('piechart_3d'));
-        chart.draw(data, options);
-      }
-      
-    </script>
+      </div>
+      <script type="text/javascript">
+       let a=parseInt("<%= arr[0].count %>");
+       let b=parseInt("<%= arr[1].count %>");
+       let c=parseInt("<%= arr[2].count %>");
+       let d=parseInt("<%= arr[3].count %>");
    
+        google.charts.load("current", {packages:["corechart"]});
+        google.charts.setOnLoadCallback(drawChart);
+        function drawChart() {
+          var data = google.visualization.arrayToDataTable([
+            ['College', 'Students'],
+            ['CET',     a],
+            ['IT',      b],
+            ['EC',  c],
+            ['TC', d]
+          ]);
+          var options = {
+            title: 'HOSTEL INFO',
+            is3D: true,
+          };
+       var chart = new google.visualization.PieChart(document.getElementById('piechart_3d'));
+          chart.draw(data, options);
+        }
+
+        
+
+ 
+      
+      </script>
+
+<script type="text/javascript">
+      let a1=parseInt("<%= b[0].count %>");
+       let b1=parseInt("<%= b[1].count %>");
+       let c1=parseInt("<%= b[2].count %>");
+       let d1=parseInt("<%= b[3].count %>");
+       let e1=parseInt("<%= b[4].count %>");
+
+
+  google.charts.load("current", {packages:["corechart"]});
+  google.charts.setOnLoadCallback(drawChart);
+  function drawChart() {
+    
+    var data1 = google.visualization.arrayToDataTable([
+      ['BLOCK', 'STUDENTS'],
+      ['BLOCK-1',     a1],
+      ['BLOCK-2',      b1],
+      ['BLOCK-3',  c1],
+      ['BLOCK-4', d1],
+      ['BLOCK-5',    e1]
+    ]);
+
+    var options1 = {
+      title: 'BLOCK WISE STUDENTS',
+      is3D: true,
+    };
+
+    var chart1 = new google.visualization.PieChart(document.getElementById('piechart_4d'));
+    chart1.draw(data1, options1);
+  }
+</script>
+      
+     
 
 <%- include('partials/footer');-%>
