--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -62,14 +62,15 @@ $(".num").counterUp({delay:5,time:500});
 
 </script>
 <div class="row">
-   <div class=" col-lg-4 col-md-3 col-sm-6" style="margin-left: 300px;">
+   <div class=" col-lg-4 col-md-3 col-sm-6" style="margin-left: 300px;margin-right: 100px;">
 
-<div id="piechart_3d" style="width: 900px; height: 500px; "></div>
+<div id="piechart_3d" style="width: 700px; height: 500px; "></div>
    </div>
    <div class=" col-lg-3 col-md-3 col-sm-6" >
-<div id="piechart_4d" style="width: 900px; height: 500px;"></div>
+<div id="piechart_4d" style="width: 700px; height: 500px;"></div>
 </div>
 </div>
+<div id="columnchart_material" style="width: 800px; height: 500px;margin-left: 300px;"></div>
 </body>
 
 
