--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -128,7 +128,7 @@ function drawChart() {
     ['BLOCKS', 'Empty', 'Filled'],
     ['Block-1', 15-a2, a2],
     ['Block-2', 15-b2, b2],
-    ['BLock-3', 15-c2, c2],
+    ['Block-3', 15-c2, c2],
     ['Block-4', 15-d2, d2],
     ['Block-5', 15-e2, e2]
   ]);
@@ -136,7 +136,7 @@ function drawChart() {
   var options2 = {
     chart: {
       title: 'ROOM STATUS OF INDIVIDUAL BLOCKS',
-      subtitle: 'Sales, Expenses, and Profit: 2014-2017',
+      subtitle: 'Filled and Empty rooms of each block',
     }
   };
 
