--- a/views/outing.ejs
+++ b/views/outing.ejs
@@ -41,7 +41,7 @@ img{
             </form>
         </div>
         <div class="col">
-            <form method="POST" action="/outing-all">
+            <form method="GET" action="/outing-all">
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTpzqG-MY3HCg1Zi4bLkMAHHUh6GKibx6JBGsM3L3DvHg80f-Hh&usqp=CAU" alt="Card image cap">
                     <div class="card-body">
